Bug 306141 - Second paragraph of a footnote gets no paragraph style
Summary: Second paragraph of a footnote gets no paragraph style
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-01 17:08 UTC by Inge Wallin
Modified: 2015-04-16 08:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Inge Wallin 2012-09-01 17:08:27 UTC
When you insert a footnote and start writing it, the second paragraph and beyond in the footnote gets no paragraph style and therefore looks completely different from the first one.

Reproducible: Always

Steps to Reproduce:
1. Insert a footnote
2. Write a sentence in the footnote
3. Press return to get a new paragraph
4. Write some more text
Actual Results:  
The second paragraph looks different from the first

Expected Results:  
They should use the same styles by default.
Comment 1 Camilla Boemann 2015-04-16 08:01:23 UTC
Git commit fc7b878f206fbf4e84e69bd18b2932eaa9c6e76e by C. Boemann.
Committed on 16/04/2015 at 08:00.
Pushed by boemann into branch 'calligra/2.9'.

The footnotes and endnotes were not displayed using the correct styles. We had just hard coded them to be shown using
superscript, but they should be done using the styles specified by the notes configuration.

The same applies to the paragraph style of the note itself - but since this is just a default we didn't see any problem
when loading files, only when adding our own footnotes.

Now netiher of the 3 styles specified by the notes configuraion needs to be present in files, and indeed are not present in
our templates, so what LO does is add some styles. We do the same with these 6 styles

Footnote : based on default paragraph
Footnote Symbol : Applied to the id in the footnote itself - just a black text style
Footnote anchor : Applied to the id in the main text area - superscript
Endnote : based on default paragraph
Endnote Symbol : Applied to the id in the endnote itself - just a black text style
Endnote anchor : Applied to the id in the main text area - superscript
REVIEW: 123195

This still doesn't work really well as the configuration stylenames are %encoded but the names in the stylemanager are
displaynames. That requires another fixup.

M  +37   -6    libs/kotext/KoInlineNote.cpp
M  +3    -1    libs/kotext/opendocument/KoTextSharedLoadingData.cpp
M  +25   -10   libs/kotext/styles/KoStyleManager.cpp
M  +19   -22   libs/odf/KoOdfNotesConfiguration.cpp
M  +10   -11   libs/odf/KoOdfNotesConfiguration.h
M  +4    -4    libs/odf/KoOdfNumberDefinition.cpp
M  +7    -27   libs/odf/KoOdfStylesReader.cpp
M  +4    -1    libs/textlayout/KoTextLayoutNoteArea.cpp
M  +2    -4    plugins/textshape/dialogs/NotesConfigurationDialog.cpp

http://commits.kde.org/calligra/fc7b878f206fbf4e84e69bd18b2932eaa9c6e76e